--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
 
-        
+
         <h1 class="site-title">
          OCULIST
         </h1>
@@ -30,8 +30,72 @@
         </nav>
     
       </header>
-  <main class="home-page">
 
+
+
+    <main class="home-page">
+
+        <section id="top-section" class="main-section blue" >
+            <h3 class="section-title"></h3>
+            <section class="sub-section" >
+                <article>
+                    <div class="img-wrapper">
+                        <img src="images/tomford.jpg" alt="">
+                    </div>
+                    <div class="s1">
+                        <h4 class="brand">TomFord</h4>
+                        <p class="price">$97</p>
+                        <button class="shop">Show Now</button>
+                    </div>
+                </article>
+                <article>
+                    <div class="img-wrapper">
+                        <img src="images/tomford.jpg" alt="">
+                    </div>
+                    <div class="s1">
+                        <h4 class="brand">TomFord</h4>
+                        <p class="price">$97</p>
+                        <button class="shop">Show Now</button>
+                    </div>
+                </article>
+                <article>
+                    <div class="img-wrapper">
+                        <img src="images/tomford.jpg" alt="">
+                    </div>
+                    <div class="s1">
+                        <h4 class="brand">TomFord</h4>
+                        <p class="price">$97</p>
+                        <button class="shop">Show Now</button>
+                    </div>
+                </article>
+                <article>
+                    <div class="img-wrapper">
+                        <img src="images/tomford.jpg" alt="">
+                    </div>
+                    <div class="s1">
+                        <h4 class="brand">TomFord</h4>
+                        <p class="price">$97</p>
+                        <button class="shop">Show Now</button>
+                    </div>
+                </article>
+            </section>
+        </section>
+
+        <section id="features-section" class="main-section blue" >
+            <h3 class="section-title"></h3>
+            <section class="sub-section" >
+                <article></article>
+            </section>
+        </section>
+
+
+
+        <section id="features-section" class="main-section blue" >
+            <h3 class="section-title"></h3>
+            <section class="sub-section" >
+                <article></article>
+            </section>
+        </section>
       <article class="slider-img">
           <!-- IMAGES -->
       </article>
