--- a/index.html
+++ b/index.html
@@ -268,7 +268,9 @@
   <footer class="footer" >
 
       <!-- Map -->
-    <div class="Map"></div>
+    <div class="Map">
+        <img src="images/"
+    </div>
   
 
 
