--- a/index.html
+++ b/index.html
@@ -269,7 +269,10 @@
 
       <!-- Map -->
     <div class="Map">
-        <img src="images/"
+        <h3>Locate Us</h3>
+        <div class="wrap-map">
+        <img src="images/map.jpg" alt="map" class="map-img">
+        </div>
     </div>
   
 
