--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
 
 
-    <main class="home-page">
+    <main class="site-main">
 
-        <section id="top-section" class="main-section blue" >
+        <section id="top-section" class="main-section white" >
             <h3 class="section-title"></h3>
             <section class="sub-section" >
                 <article>
@@ -96,11 +96,9 @@
                 <article></article>
             </section>
         </section>
-      <article class="slider-img">
-          <!-- IMAGES -->
-      </article>
+        <!-- IMAGES -->
 
-      <article class="screens">
+        <article class="screens">
         <div class="prototype">
           <!-- TWO IMAGES -->
         </div>
@@ -265,8 +263,9 @@
     
   </main>    
 
-  <footer class="footer" >
+  <footer >
 
+    <div class="footer">
       <!-- Map -->
     <div class="Map">
         <h3>Locate Us</h3>
@@ -278,7 +277,7 @@
 
 
     <!-- SOCIAL ICONS -->
-<div class="social-icons"></div>
+<div class="social-icons">
      <ul class="menu-social-search">
             <li><a href="#"><i class="fab fa-facebook-square"></i><span class="visually-hidden">Facebook</span></a></li>
             <li><a href="#"><i class="fab fa-twitter-square"></i><span class="visually-hidden">Twitter</span></a></li>
@@ -309,6 +308,7 @@
         <p class="paragraph2">Saturday: 9:30AM-5:00PM</p>
         </div>
    </div>
+  </div>
 
   </footer>
 
