--- a/index.html
+++ b/index.html
@@ -36,55 +36,24 @@
     <main class="site-main">
 
         <section id="top-section" class="main-section white" >
-            <h3 class="section-title"></h3>
+            <h3 class="section-title">Welcome to Oculist</h3>
             <section class="sub-section" >
                 <article>
                     <div class="img-wrapper">
-                        <img src="images/tomford.jpg" alt="">
+                        <img src="images/clinicimg1.jpg" alt="clinic">
                     </div>
-                    <div class="s1">
-                        <h4 class="brand">TomFord</h4>
-                        <p class="price">$97</p>
-                        <button class="shop">Show Now</button>
-                    </div>
-                </article>
-                <article>
-                    <div class="img-wrapper">
-                        <img src="images/tomford.jpg" alt="">
-                    </div>
-                    <div class="s1">
-                        <h4 class="brand">TomFord</h4>
-                        <p class="price">$97</p>
-                        <button class="shop">Show Now</button>
-                    </div>
-                </article>
-                <article>
-                    <div class="img-wrapper">
-                        <img src="images/tomford.jpg" alt="">
-                    </div>
-                    <div class="s1">
-                        <h4 class="brand">TomFord</h4>
-                        <p class="price">$97</p>
-                        <button class="shop">Show Now</button>
-                    </div>
-                </article>
-                <article>
-                    <div class="img-wrapper">
-                        <img src="images/tomford.jpg" alt="">
-                    </div>
-                    <div class="s1">
-                        <h4 class="brand">TomFord</h4>
-                        <p class="price">$97</p>
-                        <button class="shop">Show Now</button>
-                    </div>
-                </article>
+              </article>
             </section>
         </section>
 
         <section id="features-section" class="main-section blue" >
-            <h3 class="section-title"></h3>
+            <h3 class="section-title">Features</h3>
             <section class="sub-section" >
-                <article></article>
+                <article>
+                    <div class="icon">
+                        <img src="" alt="">
+                    </div>
+                </article>
             </section>
         </section>
 
