--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <section class="sub-section" >
              <!-- ARTICLE FOR BOOK AN APPOINTMENT  -->
                 <article>
-                    <div class="icon-book">
+                    <div class="icons">
                     <div class="icon-wrap">
                         <img src="images/book.png" alt="bookicon">
                     </div>
@@ -64,7 +64,7 @@
 
                     <!-- ARTICLE FOR SHOP  -->
                     <article>
-                        <div class="icon-shop">
+                        <div class="icons">
                             <div class="icon-wrap">
                                 <img src="images/shop.png" alt="bookicon">
                             </div>
@@ -78,7 +78,7 @@
 
                         <!-- ARTICLE FOR DOCTORS  -->
                         <article>
-                            <div class="icon-doc">
+                            <div class="icons">
                                 <div class="icon-wrap">
                                     <img src="images/doc.png" alt="bookicon">
                                 </div>
