--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
                     <div class="video-wrap">
                     <img src="images/youtube.png" alt="youtube">
                     </div>
+                </article>
+                <article>
                     <div class="text-video">
                         <h4>Working of Application</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, sit.</p>
