--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
 
         <div class="hours">
-        <p class="paragraph2"><strong>Open Hours</strong></p>
+        <p class="paragraph2">Open Hours</p>
         
         <p class="paragraph2">Monday-Friday: 9:00AM-6:00PM</p>
         
