--- a/index.html
+++ b/index.html
@@ -295,6 +295,9 @@
         </div>
    </div>
 
+      <div class="f-copy">
+          <p>@2020 Oculist All rights are reserved.</p>
+      </div>
 
   </footer>
 
