--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
    <!-- CONTACT US -->
 
-   <div class="contact">
+   <div id="contact">
        <div class="contact-header">
            <h3 class="contact-us"> Contact Us</h3>
        </div>
