--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
 
         <div class="hours">
-        <p class="paragraph2">Open Hours</p>
+        <h3 class="open">Open Hours</h3>
         
         <p class="paragraph2">Monday-Friday: 9:00AM-6:00PM</p>
         
