--- a/index.html
+++ b/index.html
@@ -286,9 +286,11 @@
 
 
         <div class="hours">
+        <div class="header-hour">
         <h3 class="open">Open Hours</h3>
-        
-        <p class="paragraph2">Monday-Friday: 9:00AM-6:00PM</p>
+        </div>
+
+            <p class="paragraph2">Monday-Friday: 9:00AM-6:00PM</p>
         
         <p class="paragraph2">Saturday: 9:30AM-5:00PM</p>
         </div>
