--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
      <ul class="menu-social-search">
             <li><a href="#"><i class="fab fa-facebook-square"></i><span class="visually-hidden">Facebook</span></a></li>
             <li><a href="#"><i class="fab fa-twitter-square"></i><span class="visually-hidden">Twitter</span></a></li>
-            <li><a href="#"><i class="fas fa-instagram"></i><span class="visually-hidden">Instagram</span></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i><span class="visually-hidden">Instagram</span></a></li>
           </ul>
         </div>
 
