--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Website</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/6e99977fb1.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700,800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
