--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
                 <article>
                     <div class="shop-wrap">
-                        <img src="images/mqueen.jpg" alt="tom">
+                        <img src="images/mqueen.png" alt="tom">
                     </div>
                     <div class="text-brand">
                         <h4 class="brand">MarqueQueen</h4>
