--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <section class="sub-section" >
                 <article>
                     <div class="shop-wrap">
-                        <img src="images/tomford.jpg" alt="tom">
+                        <img src="images/tomford.JPG" alt="tom">
                     </div>
                     <div class="text-brand">
                         <h4 class="brand">Tomford</h4>
