--- a/index.html
+++ b/index.html
@@ -268,16 +268,24 @@
         </div>
     </div>
   
+   <div class="ftitle">
+       <div class="logo-wrap">
+           <img src="images/logo.png" alt="logo">
+       </div>
+
+       <h1> OCULIST </h1>
 
 
-    <!-- SOCIAL ICONS -->
-<div class="social-icons">
-     <ul class="menu-social-search">
-            <li><a href="#"><i class="fab fa-facebook-square"></i><span class="visually-hidden">Facebook</span></a></li>
-            <li><a href="#"><i class="fab fa-twitter-square"></i><span class="visually-hidden">Twitter</span></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i><span class="visually-hidden">Instagram</span></a></li>
-          </ul>
-        </div>
+       <!-- SOCIAL ICONS -->
+       <div class="social-icons">
+           <ul class="menu-social-search">
+               <li><a href="#"><i class="fab fa-facebook-square"></i><span class="visually-hidden">Facebook</span></a></li>
+               <li><a href="#"><i class="fab fa-twitter-square"></i><span class="visually-hidden">Twitter</span></a></li>
+               <li><a href="#"><i class="fab fa-instagram"></i><span class="visually-hidden">Instagram</span></a></li>
+           </ul>
+       </div>
+   </div>
+
 
 
    <!-- CONTACT US -->
@@ -306,6 +314,8 @@
         </div>
         </div>
    </div>
+
+
 
       <div class="f-copy">
           <p>@2020 Oculist All rights are reserved.</p>
