--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
 <body>
     <header>
 
+        <div class="top-logo">
 
-        <h1 class="site-title">
-         OCULIST
-        </h1>
+            <div class="tlogo-wrap">
+            <img src="images/logo.png" alt="logo">
+
+                <h1 class="site-title">
+                    OCULIST
+                </h1>
+        </div>
+
+        </div>
+
     
         <nav class="menu-wrapper">
     
