--- a/index.html
+++ b/index.html
@@ -107,14 +107,22 @@
         <section id="shop-section" class="main-section white" >
             <h1 class="section-title">Shop</h1>
             <section class="sub-section" >
+
+
+
                 <article>
                     <div class="shop-wrap">
                         <img src="images/tomford.JPG" alt="tom">
                     </div>
                     <div class="text-brand">
-                        <h4 class="brand">Tomford</h4>
-                        <p class="price">$107</p>
-                        <button class="btn shop">Shop</button>
+                        <div class="model-no">
+                            <h4 class="brand">Tom Ford</h4>
+                            <p> FT5507 </p>
+                        </div>
+                        <div class="pbtn">
+                            <p class="price">$198</p>
+                            <button class="btn-shop">Shop</button>
+                        </div>
                     </div>
                 </article>
 
@@ -123,22 +131,34 @@
                         <img src="images/parada.jpg" alt="tom">
                     </div>
                     <div class="text-brand">
+                        <div class="model-no">
                         <h4 class="brand">Prada</h4>
-                        <p class="price">$157</p>
-                        <button class="btn shop">Shop</button>
+                        <p> PR16US  </p>
+                        </div>
+                        <div class="pbtn">
+                        <p class="price">$127</p>
+                        <button class="btn-shop">Shop</button>
+                        </div>
                     </div>
                 </article>
+
 
                 <article>
                     <div class="shop-wrap">
                         <img src="images/mqueen.png" alt="tom">
                     </div>
                     <div class="text-brand">
-                        <h4 class="brand">MarqueQueen</h4>
-                        <p class="price">$110</p>
-                        <button class="btn shop">Shop</button>
+                        <div class="model-no">
+                            <h4 class="brand">Alexander McQueen</h4>
+                            <p> MQ1504 </p>
+                        </div>
+                        <div class="pbtn">
+                            <p class="price">$107</p>
+                            <button class="btn-shop">Shop </button>
+                        </div>
                     </div>
                 </article>
+
 
             </section>
         </section>
