--- a/index.html
+++ b/index.html
@@ -291,10 +291,9 @@
       <!-- Map -->
     <div class="Map">
         <h1>Locate Us</h1>
-        <div class="wrap-map">
-        <img src="images/map.jpg" alt="map" class="map-img">
-        </div>
-    </div>
+        <div class="wrap-map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2609.419141560004!2d-122.89294418478657!3d49.154651987755344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5485d90ce932f807%3A0xa22bb4be186dff02!2sScott%20Road%20Eye%20Clinic!5e0!3m2!1sen!2sca!4v1585793714217!5m2!1sen!2sca" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<!--        <img src="images/map.jpg" alt="map" class="map-img">-->
+        </div></div>
   
    <div class="ftitle">
        <div class="logo-wrap">
