--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <p> FT5507 </p>
                         </div>
                         <div class="pbtn">
-                            <p class="price">$198</p>
+                            <h1  class="price">$198</h1>
                             <button class="btn-shop">Shop</button>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                         <p> PR16US  </p>
                         </div>
                         <div class="pbtn">
-                        <p class="price">$127</p>
+                            <h1  class="price">$165</h1>
                         <button class="btn-shop">Shop</button>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                             <p> MQ1504 </p>
                         </div>
                         <div class="pbtn">
-                            <p class="price">$107</p>
+                            <h1  class="price">$104</h1>
                             <button class="btn-shop">Shop </button>
                         </div>
                     </div>
@@ -205,6 +205,12 @@
                     <div class="text-video">
                         <h4>Working of Application</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, sit.</p>
+
+                    </div>
+
+                    <div class="dwn-wrap">
+                        <img src="images/download.jpg" alt="dwn">
+                        <img src="images/googlep.png" alt="dwn">
                     </div>
                 </article>
             </section>
