--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
                     </div>
                     <div class="text-team">
 
-                        <p class="role">Designer</p>
-                        <h3>Manpreet Kaur</h3>
+                        <p class="role">Developer</p>
+                        <h3>Lalit Lumar</h3>
 
                     </div>
                 </article>
@@ -238,7 +238,7 @@
                     <div class="text-team">
 
                         <p class="role">Designer</p>
-                        <h3>Manpreet Kaur</h3>
+                        <h3>Prabhjot Singh</h3>
                     </div>
                 </article>
 
@@ -249,7 +249,7 @@
                     <div class="text-team">
 
                         <p class="role">Designer</p>
-                        <h3>Manpreet Kaur</h3>
+                        <h3>Aanchal Arora</h3>
                     </div>
                 </article>
 
@@ -259,7 +259,7 @@
                     </div>
                     <div class="text-team">
                         <p class="role">Designer</p>
-                        <h3>Manpreet Kaur</h3>
+                        <h3>Arshdeep Kaur</h3>
 
                     </div>
                 </article>
@@ -269,8 +269,8 @@
                         <img src="images/member1.jpg" alt="team">
                     </div>
                     <div class="text-team">
-                        <p class="role">Designer</p>
-                        <h3>Manpreet Kaur</h3>
+                        <p class="role">Quality Assurance</p>
+                        <h3>Neha Verma</h3>
                     </div>
                 </article>
 
